# chatbot_laboratory

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  init.sql  project-structure.txt  pyproject.toml  requirements.txt
src/chatbot/: __init__.py  bulk_order.py  chat_manager.py  config.py  database.py  llm_handler.py  main.py  models.py  utils.py
