# pyproject.toml
[tool.poetry]
name = "sales-chatbot"
version = "0.1.0"
description = "AI-powered sales chatbot for order processing"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.0"
anthropic = "^0.18.0"
openai = "^1.12.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic-settings = "^2.6.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"